# qconsole

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: issue_template.md
.github/workflows/: default.yml
cmake/: qconsole.cmake.in
examples/: CMakeLists.txt
examples/example-complex/: CMakeLists.txt  main.cc
examples/example-simple/: CMakeLists.txt  main.cc
examples/example-widgets/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  QConsole  qconsole.cc  qconsole.h
tests/: CMakeLists.txt  test-qconsole.cc  test-qconsole.h
